--- a/Todo.Web/Components/Pages/ShareProjectComponent.razor.css
+++ b/Todo.Web/Components/Pages/ShareProjectComponent.razor.css
@@ -19,7 +19,7 @@
 .share-container {
     background-color: white;
     border-radius: 8px;
-    width: 20%;
+    width: 40%;
     max-width: 45%;
     max-height: 90%;
     overflow-y: auto;
@@ -34,8 +34,20 @@
     margin-bottom: 1.2%;
 }
 
-
 /*Hover effects:*/
 .project:hover{
     background-color: #05163D;
+}
+
+.shared-with{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /*align-items: center;*/    
+}
+
+.user-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
