--- a/Todo.Web/Components/Pages/ProjectPage.razor.css
+++ b/Todo.Web/Components/Pages/ProjectPage.razor.css
@@ -34,7 +34,7 @@ span {
     box-sizing: border-box;
     gap: 1%;
     padding: 20px;
-    width: 100%;
+    width: 1500px;
     min-height: 500px;
     overflow-x: auto; /* Prevent horizontal scroll */
     justify-content: flex-start;
