--- a/Todo.Web/Components/Pages/ShareProjectComponent.razor.css
+++ b/Todo.Web/Components/Pages/ShareProjectComponent.razor.css
@@ -84,3 +84,11 @@
     padding: 8px 16px;
     cursor: pointer;
 }
+
+.share-area{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    text-align: center;
+}
