--- a/Todo.Web/Components/Pages/ShareProjectComponent.razor
+++ b/Todo.Web/Components/Pages/ShareProjectComponent.razor
@@ -1,3 +1,4 @@
+@using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authorization
 @using Todo.Core.Dtos.ProjectCollaboratorDtos
 @using Todo.Core.Dtos.ProjectDtos
@@ -16,7 +17,8 @@
             <h3>Share '@Project.Name'</h3>
         </div>
         <div class="share-area">
-            <input type="text" @bind="_collaboratorEmail" placeholder="Add people"/>
+            <input type="text" @bind-Value="_collaboratorEmail" placeholder="Add people"/>
+            
             <select @bind="_selectedRole">
                 <option value="@ProjectRole.ProjectOwner">Project Owner</option>
                 <option value="@ProjectRole.ProjectMember">Project Member</option>
@@ -40,7 +42,7 @@
                 <div>
                     <p class="shared-with-text">People with access</p>
                     <div class="shared-with">
-                        @foreach (var info in Info)
+                        @foreach (var info in _info)
                         {
                             <div class="user-info">
                                 <p class="user-info-text">@info.Key</p>
@@ -73,25 +75,27 @@
     [Parameter] public ProjectDto Project { get; set; }
     [Parameter] public bool IsVisible { get; set; }
     [Parameter] public EventCallback<bool> IsVisibleChanged { get; set; }
+    
+    [EmailAddress]
     private string _collaboratorEmail = "";
+    
     private ProjectRole _selectedRole = ProjectRole.Viewer;
 
     private List<ProjectCollaboratorDto>? ProjectCollaborators { get; set; }
-    private Dictionary<string, ProjectRole> Info = new();
+    private Dictionary<string, ProjectRole> _info = new();
     
     private bool _showError = false;
     private string _errorMessage = "";
     
     private bool _isVisible;
     
-    protected async override void OnParametersSet()
+    protected override async void OnParametersSet()
     {
         try
         {
             _isVisible = IsVisible;
             ProjectCollaborators = await ProjectCollaboratorService.GetCollaboratorsFromProjectAsync(Project.Id);
-            // Add logging
-            Console.WriteLine($"Fetched Collaborators: {ProjectCollaborators?.Count ?? 0}");
+            
             await UpdateCollaboratorsEmail();
             StateHasChanged();
         }
@@ -103,8 +107,8 @@
     private async Task CloseView()
     {
         _isVisible = false;
-        //_collaboratorsEmail = [];
-        Info.Clear();
+        
+        _info.Clear();
         await IsVisibleChanged.InvokeAsync(false);
     }
     
@@ -150,44 +154,6 @@
         _errorMessage = "";
         _showError = false;
     }
-
-    private async Task OnCollaboratorRoleChanged(string? email, ChangeEventArgs e)
-    {
-        if (email == null)
-        {
-            return;
-        }
-        
-        var userId = await UserService.GetUserIdFromEmailAsync(email);
-        if (userId == null)
-        {
-            Console.WriteLine("UserId not found");
-            return;   
-        }
-
-        // Parse the selected role from the event
-        if (e.Value != null)
-        {
-            var selectedRole = (ProjectRole)Enum.Parse(typeof(ProjectRole), e.Value.ToString() ?? throw new InvalidOperationException());
-
-            var updateProjectCollaboratorDto = new UpdateProjectCollaboratorDto()
-            {
-                Role = selectedRole
-            };
-
-            var success = await ProjectCollaboratorService.UpdateCollaboratorFromProjectAsync(Project.Id, userId, updateProjectCollaboratorDto);
-            if (success)
-            {
-                ProjectCollaborators = await ProjectCollaboratorService.GetCollaboratorsFromProjectAsync(Project.Id);
-                await UpdateCollaboratorsEmail();
-                //StateHasChanged(); // Uncomment if needed
-            }
-            else
-            {
-                await ShowErrorMessage($"Failed to update Collaborator");
-            }
-        }
-    }
     
     private async Task UpdateCollaborator(string? email, ChangeEventArgs e)
     {
@@ -204,8 +170,7 @@
             Console.WriteLine("UserId not found");
             return;   
         }
-
-        // Parse the selected role from the event
+        
         if (e.Value != null)
         {
             var selectedRole = (ProjectRole)Enum.Parse(typeof(ProjectRole), e.Value.ToString() ?? throw new InvalidOperationException());
@@ -220,11 +185,10 @@
             {
                 ProjectCollaborators = await ProjectCollaboratorService.GetCollaboratorsFromProjectAsync(Project.Id);
                 await UpdateCollaboratorsEmail();
-                //StateHasChanged(); // Uncomment if needed
             }
             else
             {
-                await ShowErrorMessage($"Failed to update Collaborator");
+                await ShowErrorMessage($"Failed to update Collaborator {email}");
             }
         }
     }
@@ -233,12 +197,14 @@
     {
         if (email == null)
         {
+            await ShowErrorMessage("Failed to find email");
             Console.WriteLine("email not found");
          return;   
         }
         var userId = await UserService.GetUserIdFromEmailAsync(email);
         if (userId == null)
         {
+            await ShowErrorMessage("Failed to find User");
             Console.WriteLine("UserId not found");
             return;
         }
@@ -247,7 +213,6 @@
         {
             ProjectCollaborators = await ProjectCollaboratorService.GetCollaboratorsFromProjectAsync(Project.Id);
             await UpdateCollaboratorsEmail();
-            //StateHasChanged();
         }
         else
         {
@@ -258,8 +223,7 @@
 
     private async Task UpdateCollaboratorsEmail()
     {
-        //_collaboratorsEmail.Clear();
-        Info.Clear();
+        _info.Clear();
         if (ProjectCollaborators != null && ProjectCollaborators.Any())
         {
             foreach (var collaborator in ProjectCollaborators)
@@ -267,8 +231,7 @@
                 var email = await UserService.GetUserEmailFromNameAsync(collaborator.Name);
                 if (!string.IsNullOrEmpty(email))
                 {
-                    Info.Add(email, collaborator.Role);
-                    //_collaboratorsEmail.Add(email);
+                    _info.Add(email, collaborator.Role);
                 }
             }
         }
