--- a/Todo.Web/Components/Pages/Home.razor
+++ b/Todo.Web/Components/Pages/Home.razor
@@ -39,7 +39,7 @@
                         {
                         <div class="project-dropdown">
                                <button>Share project</button>
-                            <button @onclick="() => DeleteProjectAsync(project.Id)">Delete todo-list</button>
+                            <button @onclick="() => DeleteProjectAsync(project.Id)">Delete project</button>
                         </div>
                         } 
                     </div>
