--- a/Todo.Web/Components/Pages/SpecificTodoItemComponent.razor.css
+++ b/Todo.Web/Components/Pages/SpecificTodoItemComponent.razor.css
@@ -146,6 +146,10 @@ h3 {
     background-color: #c82333;
 }
 
+.delete-button:disabled {
+    background-color: #ccc;
+}
+
 select, input[type="date"] {
     padding: 6px;
     border: 1px solid #ddd;
